another website update

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -155,7 +155,7 @@
     margin-bottom: 7px;
 }
 
-.footer-base .disclaimer {
+.footer-base .disclaim {
     font-size: 16px;
     line-height: 1.13rem;
 }
@@ -251,7 +251,7 @@
     margin-bottom: 7px;
 }
 
-.footer-base .disclaimer {
+.footer-base .disclaim {
     line-height: 1.1rem;
 }
 }
