--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -45,19 +45,19 @@
     row-gap: 20px;
 }
 
-.b-card a {
+.b-card .a {
     display: flex;
     gap: 10px;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.b-card a img {
+.b-card .a img {
     width: 32%;
     border-radius: 5px;
 }
 
-.b-card a .card-info h3 {
+.b-card .a .card-info h3 {
     font-family: "Fredoka", sans-serif;
     font-variation-settings:
     "wdth" 100;
@@ -66,7 +66,7 @@
     color: #050017b0;
 }
 
-.b-card a .card-info p {
+.b-card .a .card-info p {
     margin-top: 5px;
     color: var(--accent);
     font-size: 14px;
@@ -111,20 +111,20 @@
     row-gap: 15px;
 }
 
-.b-card a {
+.b-card .a {
     margin-bottom: 5px;
 }
 
-.b-card a img {
+.b-card .a img {
     display: block;
     width: 30%;
 }
 
-.b-card a .card-info {
+.b-card .a .card-info {
     text-align: left;
 }
 
-.b-card a .card-info h3 {
+.b-card .a .card-info h3 {
     font-size: 17px;
 }
 }
@@ -158,11 +158,11 @@
     column-gap: 0;
 }
 
-.b-card a {
+.b-card .a {
     padding: 0 25px 0 5px;
 }
 
-.b-card a img {
+.b-card .a img {
     width: 27%;
 }
 }
